peac_dev/force-app/main/default/objects/DnB_Daily_Pass__mdt/DnB_Daily_Pass__mdt.object-meta.xml
<CustomObject>
    <label>DnB Daily Pass</label>
    <pluralLabel>DnB Daily Passes</pluralLabel>
</CustomObject>