peac_dev/force-app/main/default/objects/DnB_Daily_Pass__mdt/fields/Granted_Date__c.field-meta.xml
<CustomField>
    <fullName>Granted_Date__c</fullName>
    <label>Granted Date</label>
    <type>DateTime</type>
</CustomField>