peac_dev/force-app/main/default/objects/DnB_Daily_Pass__mdt/fields/isExpired__c.field-meta.xml
<CustomField>
    <fullName>isExpired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isExpired</label>
    <type>Checkbox</type>
</CustomField>