peac_dev/force-app/main/default/objects/DnB_Daily_Pass__mdt/listViews/more_data.listView-meta.xml
<ListView>
    <fullName>more_data</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Token__c</columns>
    <columns>Granted_Date__c</columns>
    <columns>isExpired__c</columns>
    <filterScope>Everything</filterScope>
    <label>more data</label>
</ListView>